--- a/iOS/MusicFinder/CreatePlaylistVC.xib
+++ b/iOS/MusicFinder/CreatePlaylistVC.xib
@@ -21,28 +21,34 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3n6-nq-3qC">
-                    <rect key="frame" x="62.5" y="313.5" width="250" height="40"/>
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="titre de la playlist" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3n6-nq-3qC">
+                    <rect key="frame" x="62.5" y="100" width="250" height="40"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="250" id="2X5-6F-ElR"/>
                         <constraint firstAttribute="height" constant="40" id="kni-lf-Nll"/>
                     </constraints>
                     <nil key="textColor"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="15"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GBa-b5-9kJ">
-                    <rect key="frame" x="164.5" y="373.5" width="46" height="30"/>
-                    <state key="normal" title="Button"/>
+                    <rect key="frame" x="62.5" y="160" width="250" height="40"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="40" id="YIo-k1-5BH"/>
+                        <constraint firstAttribute="width" constant="250" id="p52-uw-5gd"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="15"/>
+                    <state key="normal" title="Créer"/>
                     <connections>
                         <action selector="submitClicked:" destination="-1" eventType="touchUpInside" id="SvL-4Y-ma1"/>
                     </connections>
                 </button>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" red="0.82745098039999998" green="0.90980392160000001" blue="0.88235294119999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="GBa-b5-9kJ" firstAttribute="top" secondItem="3n6-nq-3qC" secondAttribute="bottom" constant="20" id="DZu-Uq-HdX"/>
-                <constraint firstItem="3n6-nq-3qC" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="bjl-64-kI0"/>
+                <constraint firstItem="3n6-nq-3qC" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="100" id="JjM-1L-m5I"/>
+                <constraint firstItem="GBa-b5-9kJ" firstAttribute="top" secondItem="3n6-nq-3qC" secondAttribute="bottom" constant="20" id="T3V-Q8-L3m"/>
                 <constraint firstItem="3n6-nq-3qC" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="n4R-4T-IRF"/>
                 <constraint firstItem="GBa-b5-9kJ" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="yFD-yo-aws"/>
             </constraints>
